fix: fix: display of Swiper elements on mobile, tablet screens & configured breakpoints option for Swiper component & change display of Footer component

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,9 +1,4 @@
 .footer {
-    padding: 90px 80px;
-    background-color: #1f2021;
-    flex: 0 0 auto;
-}
-.footer--minimized {
     padding: 50px 40px;
     background-color: #1f2021;
     flex: 0 0 auto;
